[gd_scene load_steps=16 format=3 uid="uid://d0ihjitc5roe5"]

[ext_resource type="Texture2D" uid="uid://bqntpniabhw5w" path="res://sprites/Entities/NPCs/Dark Figure.png" id="1_itopo"]
[ext_resource type="Script" path="res://scenes/Entities/DarkFigure/DarkFigure.gd" id="1_x1r5w"]
[ext_resource type="PackedScene" uid="uid://dba6xhqwhvjva" path="res://scenes/GUI/Key.tscn" id="3_qt42p"]
[ext_resource type="AudioStream" uid="uid://ct7ipiagm5604" path="res://sounds/sfx/Dark_Figure_Disappear.wav" id="4_5qfka"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_puakk"]
radius = 8.0
height = 28.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_72733"]
radius = 19.0
height = 52.0

[sub_resource type="AtlasTexture" id="AtlasTexture_evopc"]
atlas = ExtResource("1_itopo")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2ogm7"]
atlas = ExtResource("1_itopo")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_uummq"]
atlas = ExtResource("1_itopo")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_c2kjd"]
atlas = ExtResource("1_itopo")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_l08v7"]
atlas = ExtResource("1_itopo")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0ikeg"]
atlas = ExtResource("1_itopo")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_acof5"]
atlas = ExtResource("1_itopo")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3op8m"]
atlas = ExtResource("1_itopo")
region = Rect2(224, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_askmc"]
animations = [{
"frames": [{
"duration": 4.0,
"texture": SubResource("AtlasTexture_evopc")
}, {
"duration": 4.0,
"texture": SubResource("AtlasTexture_2ogm7")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 0.9,
"texture": SubResource("AtlasTexture_uummq")
}, {
"duration": 0.9,
"texture": SubResource("AtlasTexture_c2kjd")
}, {
"duration": 0.9,
"texture": SubResource("AtlasTexture_l08v7")
}, {
"duration": 0.9,
"texture": SubResource("AtlasTexture_0ikeg")
}, {
"duration": 0.9,
"texture": SubResource("AtlasTexture_acof5")
}, {
"duration": 0.9,
"texture": SubResource("AtlasTexture_3op8m")
}],
"loop": false,
"name": &"disappear",
"speed": 5.0
}]

[node name="DarkFigure" type="StaticBody2D"]
script = ExtResource("1_x1r5w")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_puakk")

[node name="InteractionRange" type="Area2D" parent="."]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractionRange"]
shape = SubResource("CapsuleShape2D_72733")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_askmc")
animation = &"disappear"
frame = 3
frame_progress = 1.0

[node name="Key" parent="." instance=ExtResource("3_qt42p")]
visible = false
position = Vector2(16, -18)
frame = 20

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_5qfka")

[connection signal="body_entered" from="InteractionRange" to="." method="_on_interaction_range_body_entered"]
[connection signal="body_exited" from="InteractionRange" to="." method="_on_interaction_range_body_exited"]
